<resources>
    <string name="app_name">DB Tickets</string>
    <string name="ticket_form_title">Ticket erstellen</string>
    <string name="ticket_result_title">Auftrag</string>
    <string name="settings_title">Einstellungen</string>
    <string name="german_rail_pass">German Rail Pass</string>
    <string name="eurail_global_pass">Eurail Global Pass</string>
    <string name="deutschland_ticket">Deutschlandticket</string>
    <string name="db_sparpreis">DB Sparpreis</string>
    <string name="grp_desc">Flexibel durch Deutschland reisen</string>
    <string name="eurail_desc">Ganz Europa entdecken</string>
    <string name="dt_desc">Monatlich im Nahverkehr</string>
    <string name="sparpreis_desc">Guenstig von A nach B</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="gueltig_von">Gueltig von</string>
    <string name="gueltig_bis">Gueltig bis</string>
    <string name="klasse">Klasse</string>
    <string name="passagier_typ">Passagier-Typ</string>
    <string name="reisetage">Reisetage</string>
    <string name="pass_typ">Pass-Typ</string>
    <string name="von_station">Von</string>
    <string name="nach_station">Nach</string>
    <string name="zug_typ">Zugtyp</string>
    <string name="zug_nummer">Zugnummer</string>
    <string name="abfahrt_zeit">Abfahrtszeit</string>
    <string name="ankunft_zeit">Ankunftszeit</string>
    <string name="ticket_erstellen">Ticket erstellen</string>
    <string name="bitte_warten">Bitte warten...</string>
    <string name="auftragsnummer">Auftragsnummer</string>
    <string name="ticket_id">Ticket-ID</string>
    <string name="pdf_herunterladen">PDF herunterladen</string>
    <string name="neues_ticket">Neues Ticket</string>
    <string name="zurueck">Zurueck</string>
    <string name="server_url">Server-URL</string>
    <string name="server_url_hint">https://example.com</string>
    <string name="speichern">Speichern</string>
    <string name="error_connection">Verbindung zum Server fehlgeschlagen</string>
    <string name="error_fields">Bitte alle Pflichtfelder ausfuellen</string>
    <string name="success_ticket">Ticket erfolgreich erstellt!</string>
    <string name="success_settings">Einstellungen gespeichert!</string>
    <string name="klasse_1">1. Klasse</string>
    <string name="klasse_2">2. Klasse</string>
    <string name="erwachsener">Erwachsener</string>
    <string name="jugendlicher">Jugendlicher</string>
    <string name="consecutive">Konsekutiv</string>
    <string name="flexi">Flexi</string>
    <string name="ticket_abrufen">Ticket abrufen</string>
    <string name="ticket_abrufen_beschreibung">Gib deine Auftragsnummer ein, um dein Ticket zu laden.</string>
    <string name="ticket_laden">Ticket laden</string>
    <string name="wird_geladen">Wird geladen...</string>
    <string name="bitte_auftragsnummer_eingeben">Bitte Auftragsnummer eingeben</string>
    <string name="ticket_nicht_gefunden">Ticket nicht gefunden</string>
    <string name="fehler_beim_laden">Fehler beim Laden des Tickets</string>
    <string name="letzte_tickets">Letzte Tickets</string>
    <string name="noch_keine_tickets">Noch keine Tickets geladen</string>
    <string name="tickets_durchsuchen">Tickets durchsuchen...</string>
    <string name="ticket_loeschen">Ticket loeschen</string>
    <string name="ticket_loeschen_frage">Moechtest du das Ticket %s wirklich loeschen?</string>
    <string name="loeschen">Loeschen</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="ticket_geloescht">Ticket geloescht</string>
    <string name="authentifizierung_fehlgeschlagen">Authentifizierung fehlgeschlagen</string>
    <string name="identifiziere_dich">Identifiziere dich um fortzufahren</string>
    <string name="ticket_teilen">Ticket teilen</string>
    <string name="ticket_teilen_text">Mein Ticket %1$s (%2$s)\nGueltig: %3$s - %4$s\nAuftrags-Nr: %5$s</string>
    <string name="backup_exportieren">Backup exportieren</string>
    <string name="backup_importieren">Backup importieren</string>
    <string name="backup_erfolgreich">Backup erfolgreich exportiert</string>
    <string name="restore_erfolgreich">%d Tickets importiert</string>
    <string name="keine_tickets_zum_exportieren">Keine Tickets zum Exportieren</string>
<string name="ab">ab</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abfahrt">abfahrt</string>
<string name="abfahrten">abfahrten</string>
<string name="academicTitle">academicTitle</string>
<string name="accountAddAddress">accountAddAddress</string>
<string name="accountAddBirthday">accountAddBirthday</string>
<string name="accountAddEmail">accountAddEmail</string>
<string name="accountAddPersonalData">accountAddPersonalData</string>
<string name="accountAddress">accountAddress</string>
<string name="accountBillingAddress">accountBillingAddress</string>
<string name="accountBirthday">accountBirthday</string>
<string name="accountChangeEmailUsageHint">accountChangeEmailUsageHint</string>
<string name="accountCompany">accountCompany</string>
<string name="accountCompanyNameRequired">accountCompanyNameRequired</string>
<string name="accountDeleteAddress">accountDeleteAddress</string>
<string name="accountDeliveryAddress">accountDeliveryAddress</string>
<string name="accountDigitalServices">accountDigitalServices</string>
<string name="accountDigitalServicesLink">accountDigitalServicesLink</string>
<string name="accountDigitalServicesText">accountDigitalServicesText</string>
<string name="accountEdit">accountEdit</string>
<string name="accountKontaktEmailOutdatedHint">accountKontaktEmailOutdatedHint</string>
<string name="accountLinkToLogin">accountLinkToLogin</string>
<string name="accountName">accountName</string>
<string name="accountNumber">accountNumber</string>
<string name="addCreditCardConfirm">addCreditCardConfirm</string>
<string name="addFavorit">addFavorit</string>
<string name="addRueckfahrt">addRueckfahrt</string>
<string name="addressExtra">addressExtra</string>
<string name="addressType">addressType</string>
<string name="alleAngebote">alleAngebote</string>
<string name="alternativeAccessibilityLoadingResults">alternativeAccessibilityLoadingResults</string>
<string name="alternativeDetailsAuswaehlen">alternativeDetailsAuswaehlen</string>
<string name="alternativenSucheUrspruenglicheVerbindung">alternativenSucheUrspruenglicheVerbindung</string>
<string name="angebotsAuswahlHinRueckFahrt">angebotsAuswahlHinRueckFahrt</string>
<string name="angebotsAuswahlShowDetails">angebotsAuswahlShowDetails</string>
<string name="ankuenfte">ankuenfte</string>
<string name="ankunft">ankunft</string>
<string name="asteriskWithBlank">asteriskWithBlank</string>
<string name="atLeast">atLeast</string>
<string name="attributeInformation">attributeInformation</string>
<string name="aufenthaltsdauer">aufenthaltsdauer</string>
<string name="bahnBonus">bahnBonus</string>
<string name="bahnBonusAppExplain">bahnBonusAppExplain</string>
<string name="bahnBonusAppLink">bahnBonusAppLink</string>
<string name="bahnBonusAppTitle">bahnBonusAppTitle</string>
<string name="bahnBonusBenefitsExplain">bahnBonusBenefitsExplain</string>
<string name="bahnBonusBenefitsLink">bahnBonusBenefitsLink</string>
<string name="bahnBonusBenefitsTitle">bahnBonusBenefitsTitle</string>
<string name="bahnBonusCardSubscribeText">bahnBonusCardSubscribeText</string>
<string name="bahnBonusCardSubscribed">bahnBonusCardSubscribed</string>
<string name="bahnBonusCardTitle">bahnBonusCardTitle</string>
<string name="bahnBonusLockedInfoText">bahnBonusLockedInfoText</string>
<string name="bahnBonusNummerContentDesc">bahnBonusNummerContentDesc</string>
<string name="bahnBonusNummerTitle">bahnBonusNummerTitle</string>
<string name="bahnBonusProfilUnsubscribeTitle">bahnBonusProfilUnsubscribeTitle</string>
<string name="bahnBonusSubscribe">bahnBonusSubscribe</string>
<string name="bahnBonusSubscribeHeader">bahnBonusSubscribeHeader</string>
<string name="bahnBonusSubscribeMessage">bahnBonusSubscribeMessage</string>
<string name="bahnBonusUnsubscribeButton">bahnBonusUnsubscribeButton</string>
<string name="bahnBonusUnsubscribeDescription">bahnBonusUnsubscribeDescription</string>
<string name="bahnCardBildContentDescription">bahnCardBildContentDescription</string>
<string name="bahnCardCodeInvalidTitle">bahnCardCodeInvalidTitle</string>
<string name="bahnCardControll">bahnCardControll</string>
<string name="bahnCardInformation">bahnCardInformation</string>
<string name="bahnCardTitle">bahnCardTitle</string>
<string name="bahnCardUpdate">bahnCardUpdate</string>
<string name="befoederer">befoederer</string>
<string name="beschreibungZwischenhalte">beschreibungZwischenhalte</string>
<string name="bevorzugt">bevorzugt</string>
<string name="blankPipeBlank">blankPipeBlank</string>
<string name="bookingConfirmationResLmskUsed">bookingConfirmationResLmskUsed</string>
<string name="bookingConfirmationThankYou">bookingConfirmationThankYou</string>
<string name="bookingConfirmationWagon">bookingConfirmationWagon</string>
<string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
<string name="btnSelect">btnSelect</string>
<string name="buchungsbestaetigungBahnCardInfoText">buchungsbestaetigungBahnCardInfoText</string>
<string name="cancel">cancel</string>
<string name="cancelContracts">cancelContracts</string>
<string name="catalyst_dismiss_button">catalyst_dismiss_button</string>
<string name="catalyst_reload_button">catalyst_reload_button</string>
<string name="catalyst_report_button">catalyst_report_button</string>
<string name="checkedIn">checkedIn</string>
<string name="cityPflicht">cityPflicht</string>
<string name="close">close</string>
<string name="confirm">confirm</string>
<string name="connectionDays">connectionDays</string>
<string name="connectionErrorMessage">connectionErrorMessage</string>
<string name="contextualClickTargetAccessibility">contextualClickTargetAccessibility</string>
<string name="contextualIcePortal">contextualIcePortal</string>
<string name="contextualReservationGleisabschnittShort">contextualReservationGleisabschnittShort</string>
<string name="contextualSupportUpdatingRealTimeData">contextualSupportUpdatingRealTimeData</string>
<string name="contextualToMapAccessibility">contextualToMapAccessibility</string>
<string name="contextualToReisevorschauAccessibility">contextualToReisevorschauAccessibility</string>
<string name="contextualToTicketUpgradeAnsichtAccessibility">contextualToTicketUpgradeAnsichtAccessibility</string>
<string name="contextualToTicketansichtAccessibility">contextualToTicketansichtAccessibility</string>
<string name="contextualToZugbindungsaufhebungAccessibility">contextualToZugbindungsaufhebungAccessibility</string>
<string name="contextualUpdateRealTimeData">contextualUpdateRealTimeData</string>
<string name="continueToPayment">continueToPayment</string>
<string name="country">country</string>
<string name="dataProtection">dataProtection</string>
<string name="dateBestpreisHint">dateBestpreisHint</string>
<string name="dateTimeNow">dateTimeNow</string>
<string name="dateTimePlus15">dateTimePlus15</string>
<string name="dateTimePlus15CntDsc">dateTimePlus15CntDsc</string>
<string name="dateTimePlus60">dateTimePlus60</string>
<string name="dateTimePlus60CntDsc">dateTimePlus60CntDsc</string>
<string name="deepLinkDefaultTitle">deepLinkDefaultTitle</string>
<string name="hinfahrt">hinfahrt</string>
<string name="rueckfahrt">rueckfahrt</string>
<string name="timeDummy">timeDummy</string>
</resources>