<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/dateTimePickerRoot" android:background="@color/lightBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/text_button_toolbar" />
    <com.google.android.material.tabs.TabLayout android:id="@id/dateTimeHinRueckTabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintTop_toTopOf="parent" app:tabIndicatorColor="@color/dbRed" app:tabIndicatorHeight="4.0dip" app:tabInlineLabel="true" app:tabMode="fixed" app:tabSelectedTextColor="@color/defaultTextColor" app:tabTextAppearance="@style/DBGeneralTabs" app:tabTextColor="@color/defaultTextColorGrey">
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hinfahrt" />
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rueckfahrt" />
    </com.google.android.material.tabs.TabLayout>
    <FrameLayout android:background="@color/greyBackground" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:requiresFadingEdge="vertical">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/timeInputContent" android:background="@color/lightBackground" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/drop_shadow_height">
                    <androidx.compose.ui.platform.ComposeView android:id="@id/dateTimeDatePicker" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <LinearLayout android:orientation="vertical" android:id="@id/timeInputContainer" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <View android:background="@drawable/line_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                        <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_vertical" android:id="@id/timeContainer" android:background="@color/lightBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="24.0dip" android:paddingEnd="24.0dip">
                            <com.google.android.material.tabs.TabLayout android:id="@id/dateTimeDepartArrival" android:layout_width="200.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tabIndicatorColor="@color/dbRed" app:tabIndicatorHeight="4.0dip" app:tabMode="fixed" app:tabSelectedTextColor="@color/defaultTextColor" app:tabTextAppearance="@style/DBGeneralTabs" app:tabTextColor="@color/defaultTextColorGrey">
                                <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/abfahrt" />
                                <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/ankunft" />
                            </com.google.android.material.tabs.TabLayout>
                            <TextView android:textSize="@dimen/fix_font_size_large" android:textColor="@color/defaultTextColor" android:gravity="center" android:id="@id/timeViewer" android:background="@drawable/background_rounded_corner_grey" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/timeDummy" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <View android:id="@id/dateTimeStepButtonsDivider" android:background="@drawable/line_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                        <LinearLayout android:id="@id/dateTimeStepButtons" android:background="@color/lightBackground" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                            <Button android:id="@id/dateTimeNow" android:layout_width="0.0dip" android:layout_height="32.0dip" android:text="@string/dateTimeNow" android:layout_weight="1.0" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" style="@style/DBBorderedButton" />
                            <Button android:id="@id/dateTimePlus15" android:layout_width="0.0dip" android:layout_height="32.0dip" android:text="@string/dateTimePlus15" android:layout_weight="1.0" android:contentDescription="@string/dateTimePlus15CntDsc" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" style="@style/DBBorderedButton" />
                            <Button android:id="@id/dateTimePlus60" android:layout_width="0.0dip" android:layout_height="32.0dip" android:text="@string/dateTimePlus60" android:layout_weight="1.0" android:contentDescription="@string/dateTimePlus60CntDsc" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" style="@style/DBBorderedButton" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/bestpreisHintFrame" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:importantForAccessibility="no" android:layout_marginEnd="12.0dip" app:srcCompat="@drawable/ic_info_grey" />
                    <TextView android:textColor="@color/defaultTextColorGrey" android:id="@id/bestpreisHint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dateBestpreisHint" android:lineSpacingExtra="6.0sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <View android:background="@drawable/drop_shadow_down" android:layout_width="fill_parent" android:layout_height="@dimen/drop_shadow_height" />
    </FrameLayout>
</LinearLayout>